--- a/.env.local
+++ b/.env.local
@@ -11,7 +11,7 @@ NEXT_PUBLIC_VERSION=4.4.6
 # NEXT_PUBLIC_REVALIDATE_SECOND=  
 # NEXT_PUBLIC_THEME=matery
 # NEXT_PUBLIC_THEME_SWITCH=
-# NEXT_PUBLIC_LANG=
+# NEXT_PUBLIC_LANG='zh-CN'
 # NEXT_PUBLIC_APPEARANCE=
 # NEXT_PUBLIC_APPEARANCE_DARK_TIME=
 # NEXT_PUBLIC_GREETING_WORDS=
